<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>loon</groupId>
    <artifactId>loon-framework</artifactId>
    <version>0.5-SNAPSHOT</version>
    
    <packaging>pom</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Loon Game Framework</description>

    <modules>
        <module>loon-core</module>
        <module>loon-javase</module>
        <module>loon-gwt</module>
        <module>loon-robovm</module>
        <module>loon-lwjgl3</module>
        <module>loon-android</module>
        <module>loon-teavm</module>
    </modules>

    <licenses>
        <license>
            <name>Apache-2.0 License</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <issueManagement>
        <url>https://github.com/cping/LGame/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <source.version>18</source.version>
        <fxgl.version>${project.version}</fxgl.version>

        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>dd.MM.yyyy HH.mm</maven.build.timestamp.format>

        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
  
        <!-- plugins -->
        <maven.gpg.version>1.6</maven.gpg.version>
        <sonatype.nexus.staging.version>1.6.13</sonatype.nexus.staging.version>
        <maven.compiler.version>3.13.0</maven.compiler.version>
        <maven.pmd.version>3.26.0</maven.pmd.version>
        <maven.license.version>3.0</maven.license.version>
        <maven.source.version>3.2.0</maven.source.version>
        <maven.jar.version>3.2.0</maven.jar.version>
        <maven.shade.version>3.2.2</maven.shade.version>
        <jacoco.version>0.8.12</jacoco.version>
        <maven.surefire.version>3.0.0</maven.surefire.version>
        <build.helper.version>3.0.0</build.helper.version>
        <maven.templating.version>1.0.0</maven.templating.version>

        <!-- dependencies -->
        <attach.version>4.0.17</attach.version>
        <jackson.version>2.18.2</jackson.version>
        <selenium.version>4.18.1</selenium.version>
        <slf4j.version>2.0.6</slf4j.version>

        <!-- test dependencies -->
        <junit.jupiter.version>5.10.0</junit.jupiter.version>
        <junit.platform.version>1.10.0</junit.platform.version>
        <hamcrest.version>1.3</hamcrest.version>
    </properties>

    <dependencies>

        <!-- test scope dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>

                <!-- Compile java -->
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <release>${source.version}</release>
                        <compilerArgs>
                            <arg>--module-version</arg>
                            <arg>${project.version}</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <!-- Create sources.jar -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Create empty javadoc.jar -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.version}</version>
                    <executions>
                        <execution>
                            <id>empty-javadoc-jar</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <configuration>
                                <classifier>javadoc</classifier>
                                <classesDirectory>${basedir}/javadoc</classesDirectory>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Check code quality -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${maven.pmd.version}</version>
                <configuration>
                    <targetJdk>${maven.compiler.target}</targetJdk>
                    <verbose>true</verbose>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Check license headers -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${maven.license.version}</version>
                <configuration>
                    <header>LICENSE_HEADER</header>
                    <strictCheck>false</strictCheck>
                    <includes>
                        <include>**/*.java</include>
                    </includes>
                    <excludes>
                        <exclude>src/test/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Sign artifact using gpg -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>

                        <!-- This is needed for maven deploy using GH Actions -->
                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Upload to sonatype nexus / maven central -->
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${sonatype.nexus.staging.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
            </plugin>
        </plugins>
    </build>
</project>